# pin-it-rust

./: .env.example  Cargo.toml  README.md  RELEASE.md
.cargo/: config.toml
src/: main.rs
