[package]
name = "discord-pin-bot"
version = "0.1.0"
edition = "2021"
description = "High-performance Discord bot for pinning messages with voting system"
authors = ["n1cat n1catgx@gmail.com"]

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
